[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stdio"
path = "src/bin/stdio.rs"

[[bin]]
name = "streamable"
path = "src/bin/streamhttp.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
chrono = "0.4"
openid = "0.18.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rmcp = { version = "0.15.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
trustify-auth = { git = "https://github.com/guacsec/trustify.git", tag = "v0.4.5"}
trustify-module-fundamental = { git = "https://github.com/guacsec/trustify.git", tag = "v0.4.5"}
urlencoding = "2.1"

[dev-dependencies]
log = "0.4"
rmcp = { version = "0.15.0", features = ["client", "transport-child-process"] }
test-log = "0.2.18"
trustify-test-context = { git = "https://github.com/guacsec/trustify.git", tag = "v0.4.5"}
